# out-of-the-cave

./: .gitignore  CLAUDE.md  README.md  game-design-brief.md  pyproject.toml  pytest.ini
.claude/: settings.json
data/: names.yaml  traits.yaml
data/events/: tier_1_survival.yaml  tier_2_organization.yaml  tier_3_society.yaml  tier_4_republic.yaml  tier_5_legacy.yaml
src/: main.py
src/ai/: narrator.py
src/models/: civilization.py  game_state.py  milestone.py  npc.py  player.py
src/persistence/: save_manager.py
src/systems/: delegation.py  dice.py  events.py  fortune.py  milestones.py  npc_generator.py
src/ui/: input_handler.py  renderer.py
tests/: README.md  conftest.py  test_delegation.py  test_dice.py  test_events.py  test_full_game_progression.py  test_game_state.py  test_milestones.py  test_narrator.py
